--- a/css/style.css
+++ b/css/style.css
@@ -51,4 +51,5 @@ h1 {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    text-align: center; 
 }
