--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ p {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     text-align: center;
+    opacity: 1;
+    background: #0097A7;
+    border-radius: 50px;
+    padding: 1%;
 }
 
 .about {
