updated style of hover

--- a/css/style.css
+++ b/css/style.css
@@ -44,15 +44,15 @@ p {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .container:hover .overlay {
-    opacity: .75;
+    opacity:1;
 }
 
 .text {
-    color: #424242;
+    color: white;
     font-size: 23px;
     font-family: Calibri;
     position: absolute;
@@ -66,6 +66,9 @@ p {
     background: #0097A7;
     border-radius: 50px;
     padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    z-index: 10;
 }
 
 .about {
@@ -142,8 +145,11 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    background-color: #424242;
+    background-color: #0097A7;
     font-size: 130%;
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
   }
 
   a:hover {
