--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,13 @@ h1, h2 {
 
 .image {
     display: block;
-    padding-top: 50px;
+
     width: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 p {
@@ -119,6 +121,10 @@ a {
   color: #757575;
 }
 
+.index_row{
+  padding-top: 50px;
+}
+
 @media only screen and (max-width: 600px) {
   h1, h2 {
       text-align: center;
@@ -131,6 +137,7 @@ a {
   .container {
       position: relative;
       width: 80%;
+
   }
 
   .image {
@@ -140,7 +147,7 @@ a {
       display: block;
       margin-left: auto;
       margin-right: auto;
-  }
+        }
 
   .overlay {
       height: 100%;
