updated homepage for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,14 @@ a {
       padding-top:10%;
   }
 
+  .index_row{
+    padding-top: 0px;
+  }
+
+  .mobile_column{
+    padding-top: 40px;
+  }
+
   .container {
       position: relative;
       width: 80%;
@@ -142,7 +150,6 @@ a {
 
   .image {
       display: block;
-      padding-top: 50px;
       width: 90%;
       display: block;
       margin-left: auto;
