--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@ p {
     margin-left: auto;
     margin-right: auto;
 }
+
+.body_images_horizontal{
+  width: 100%;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .overlay {
     position: absolute;
     top: 0;
