--- a/css/style.css
+++ b/css/style.css
@@ -130,14 +130,15 @@ p {
     text-align: center;
 }
 
-.about a{
+.icon_link a{
   color: black;
 }
 
-a:hover {
+.icon_link a:hover {
     text-decoration:none;
     font-weight:none;
     color: #0097A7;
+    background: none;
 }
 
 h2:hover {
