--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,11 @@ p {
     text-align: center;
 }
 
+.icon_link{
+  text-align: center;
+  padding-top: 5%;
+}
+
 .icon_link a{
   color: black;
 }
@@ -233,6 +238,49 @@ padding-bottom: 5%;
   position: sticky;
 }
 
+.main_page{
+  position: fixed;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   overflow: auto;
+}
+
+.main_page h2{
+  padding-bottom: 5%;
+  padding-top: 0;
+
+}
+
+.main_page h3{
+  font-size: 150%;
+  text-align: center;
+
+}
+
+.index_column_left{
+  font-size: 150%;
+  font-color: #424242;
+  padding-left: 10%;
+  font-family: 'Slabo 27px', serif;
+}
+
+.index_text{
+  display: none;
+  font-size: 80%;
+}
+.display{
+  show: block;
+}
+
+.index_list{
+  width: 100%;
+}
+.index_column_right{
+  padding-right: 10%;
+}
+
 @media only screen and (max-width: 600px) {
   h1, h2 {
       text-align: center;
@@ -309,6 +357,8 @@ padding-bottom: 5%;
   .about {
       font-size: 130%;
   }
+
+
 
   .container-fluid{
     width: 95%;
