--- a/css/style.css
+++ b/css/style.css
@@ -319,11 +319,11 @@ padding-bottom: 5%;
   .overlay {
       height: 100%;
       width: 100%;
-      opacity: 1;
+      opacity: 0;
       background-color: rgb(0,0,0,0);
   }
 
-  .container:hover .overlay {
+  .container:hover, .container:focus, .container:active .overlay {
       opacity: 1;
   }
 
@@ -350,9 +350,7 @@ padding-bottom: 5%;
       color: #0097A7;
   }
 
-  .art_pages .text{
-    display: none;
-  }
+
 
   .about {
       font-size: 130%;
