--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,14 @@ padding-bottom: 5%;
       margin-right: auto;
         }
 
-  .overlay {
+.overlay {
+      height: 100%;
+      width: 100%;
+      opacity: 1;
+      background-color: rgb(0,0,0,0);
+  }
+
+  .art_pages .overlay {
       height: 100%;
       width: 100%;
       opacity: 0;
