--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ a.about_link {
     background-color:white;
   }
 
+h1, h2, h3, p {
+  font-family: 'Quicksand', sans-serif;
+}
 
 h1 {
     text-align: center;
@@ -18,7 +21,7 @@ h1 {
     font-size: 50px;
     padding: 30px;
     padding-top:40px;
-    font-family: 'Roboto', sans-serif;
+
 }
 
 .container {
@@ -65,6 +68,7 @@ h1 {
 p {
 
   size: 130%;
+
 }
 
 .description_section{
