--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,11 @@ a.about_link {
     color: var(--pop-color);
     background-color:white;
   }
-
+body{
+  font-size: 120%;
+}
 h1, h2, h3, p {
-  font-family: 'Quicksand', sans-serif;
+      font-family: 'Lato', sans-serif;
 }
 
 h1 {
