--- a/css/style2.0.css
+++ b/css/style2.0.css
@@ -17,11 +17,20 @@ a.about_link {
     color: var(--pop-color);
     background-color:white;
   }
+
 body{
   font-size: 120%;
 }
-h1, h2, h3, p {
+
+h1, h2, h3 {
     font-family:   var(--secondary-font);
+}
+
+h1{
+  text-transform: uppercase;
+}
+p {
+    font-family:   var(--main-font);
 }
 
 .intro{
@@ -147,7 +156,7 @@ p {
 .image_caption{
   font-size: 90%;
   text-align: center;
-  font-style: italic;
+  font-family: var(--secondary-font);
   padding-top: 1%;
 
 }
