--- a/css/style_old.css
+++ b/css/style_old.css
@@ -1,12 +1,5 @@
-/* wow messy code! please excuse */
-
 :root {
   --pop-color: #008290;
-  --pop-color2: #D4E09B;
-  --main-font:   'Lato', sans-serif ;
-  --secondary-font: 'Ubuntu Mono', monospace;
-
-
 }
 
 a.about_link {
@@ -17,56 +10,18 @@ a.about_link {
     color: var(--pop-color);
     background-color:white;
   }
-
 body{
   font-size: 120%;
 }
-
-h1, h2, h3 {
-    font-family:   var(--secondary-font);
+h1, h2, h3, p {
+      font-family: 'Lato', sans-serif;
 }
-
-h1{
-  text-transform: uppercase;
-}
-p {
-    font-family:   var(--main-font);
-}
-
-.intro{
-    text-align: right;
-    position: sticky;
-}
-
-.profile_image{
-  width: 30%;
-  height: 30%;
-  text-align: right;
-  padding-bottom: 5%;
-
-}
-
-.index_list h2 {
-  text-align: left;
-}
-
-.intro h1{
-  color: var(--pop-color);
-  text-align: right;
-  font-weight: bold;
-}
-
-.intro p{
-  text-align: right;
-}
-
-
 
 h1 {
     text-align: center;
     color: #424242;
     font-size: 50px;
-
+    padding: 30px;
     padding-top:40px;
 
 }
@@ -156,7 +111,7 @@ p {
 .image_caption{
   font-size: 90%;
   text-align: center;
-  font-family: var(--secondary-font);
+  font-style: italic;
   padding-top: 1%;
 
 }
@@ -187,7 +142,7 @@ p {
 .text {
     color: white;
     font-size: 23px;
-    font-family:   var(--main-font);
+    font-family: Calibri;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -207,7 +162,7 @@ p {
 .about {
     color: #424242;
     font-size: 23px;
-    font-family:   var(--main-font);
+    font-family: Calibri;
     text-align: center;
 }
 
@@ -272,34 +227,6 @@ padding-bottom: 5%;
 
 @media only screen and (max-width: 900px) {
 
-
-  .intro{
-      text-align: left;
-
-  }
-
-  .profile_image{
-    width: 40%;
-    height: 40%;
-    text-align: left;
-    padding-bottom: 5%;
-    padding-top:10%;
-
-  }
-
-
-
-  .intro h1{
-    color: var(--pop-color);
-    text-align: left;
-  }
-
-  .intro p{
-    text-align: left;
-  }
-
-
-
   .desktop_only{
     display: none;
   }
@@ -341,32 +268,20 @@ padding-bottom: 5%;
 .main_page h1{
   padding-bottom: 5%;
   padding-top: 0;
-  text-transform: uppercase;
-  font-family:   var(--secondary-font);
 
 }
 
+.main_page h2{
+  font-size: 150%;
+  text-align: center;
+
+}
 
 .index_column_left{
-
+  font-size: 150%;
   font-color: #424242;
-  padding-left: 5%;
-  padding-right: 10%;
-  background-color: var(--pop-color2);
-  height: 100%;
-  margin: auto;
-  position: relative;
-
-
-}
-
-.index_column_left .toc {
-  margin-left: 0;
-  margin-right: 10%;
-
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+  padding-left: 10%;
+  font-family: 'Slabo 27px', serif;
 }
 
 .index_text{
@@ -380,71 +295,18 @@ padding-bottom: 5%;
 .index_list{
   width: 100%;
 }
-
 .index_column_right{
-  padding-right: 5%;
-  padding-left: 10%;
-   vertical-align: middle;
-
-
+  padding-right: 10%;
 }
 
-.index_column_left h2{
-font-size: 120%;
-padding-top: 5%;
-font-weight: bold;
-font-family:   var(--secondary-font);
-  text-transform: uppercase;
-}
-
-.index_column_left .tags {
-font-family:   var(--secondary-font);
-}
-
-.index_column_left p {
-  font-size: 100%;
-  padding-bottom: 1%;
-  line-height: 1.1;
-  margin-bottom: 0%;
-
-
-}
-
-
-
-
-/*MOBILE CSS */
 @media only screen and (max-width: 600px) {
-  .index_column_left{
-
-    position: static;
-    height: auto;
-
-    padding-bottom: 10%;
-
-    padding-top: 10%;
-
-
-  }
-
-  .index_column_left .toc {
-
-    position: static;
-    transform: translate(0, 0);
-    margin-right: 0;
-
-  }
-
   h1, h2 {
-
+      text-align: center;
       color: #424242;
       font-size: 200%;
-
+      padding: 7%;
       padding-top:10%;
   }
-
-
-
 
   .mobile_only{
     display: block;
@@ -526,32 +388,6 @@ font-family:   var(--secondary-font);
   .art_pages{
     width: 100%;
   }
-
-  .index_list h2 {
-    text-align: left;
-    font-size: 90%;
-    padding-top: 10%;
-  }
-
-  .index_column_left h2{
-    margin-top: 10%;
-  }
-
-
-    .index_column_left p{
-      font-size: 95%;
-      line-height: 1.4;
-      padding-top: 1%;
-    }
-
-.index_column_left, .index_column_right{
-  margin-left: 1%;
-  margin-right: 1%;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-
 
 
 
