updated background color

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
   --pop-color: #008290;
-  --pop-color2: #D4E09B;
+  --pop-color2: #FFE7D6;
   --main-font:   'Lato', sans-serif ;
   --secondary-font: 'Ubuntu Mono', monospace;
 
