--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,10 @@ a {
   color: var(--pop-color);
   text-decoration: none;
 }
+
+.index_column_left a:hover{
+    color: var(--pop-color2);
+}
 a:hover{
   text-decoration: none;
   background-color: var(--pop-color);
