updated mobile styles

--- a/css/style.css
+++ b/css/style.css
@@ -442,12 +442,16 @@ font-family:   var(--secondary-font);
 
   }
 
-  h1, h2 {
+  h1 {
 
       color: #424242;
       font-size: 200%;
 
       padding-top:10%;
+  }
+
+  h2{
+    font-size: 130%;
   }
 
 
@@ -536,7 +540,7 @@ font-family:   var(--secondary-font);
 
   .index_list h2 {
     text-align: left;
-    font-size: 110%;
+    font-size: 130%;
     padding-top: 10%;
   }
 
