updated open source doc

--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ p {
 
 .image_caption{
   font-size: 90%;
-  text-align: center;
+  text-align: left;
   font-family: var(--secondary-font);
   padding-top: 1%;
 
