added another project

--- a/css/style.css
+++ b/css/style.css
@@ -150,9 +150,8 @@ p {
 
 .body_images{
   width: 50%;
-  display: block;
-    margin-left: auto;
-    margin-right: auto;
+
+      border: 5px solid var(--pop-color2);
 }
 
 .image_caption{
