updated colors for AA accessibility

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* wow messy code! please excuse */
 
 :root {
-  --pop-color: #007F8C;
+  --pop-color: #007E8B;
   /* --pop-color: #008290;
   --pop-color2: #FFE7D6; */
   --pop-color2: #E1FFF6;
