--- a/css/style.css
+++ b/css/style.css
@@ -423,6 +423,10 @@ font-family:   var(--secondary-font);
   text-align:center;
 }
 
+.col-md-6{
+  padding-top: 8px;
+}
+
 /*TABLET CSS */
 @media only screen and (max-width: 900px) {
 
@@ -527,7 +531,7 @@ font-family:   var(--secondary-font);
   }
 
   h2{
-    font-size: 130%;
+    font-size: 140%;
   }
 
 
@@ -649,6 +653,11 @@ font-family:   var(--secondary-font);
   padding-left: 10%;
   padding-right: 10%;
 }
+
+.col-md-6{
+  padding-top: 5px;
+}
+
 
 
 
